--- a/Thesis/Thesis 0.1.tex
+++ b/Thesis/Thesis 0.1.tex
@@ -11,14 +11,13 @@
 \usepackage{harvard}
 \usepackage{titlesec, blindtext, color}
 \usepackage{thm-restate}
-\usepackage[T1]{fontenc}
 \usepackage{textcomp}
 
 \definecolor{gray75}{gray}{0.75}
 \newcommand{\hsp}{\hspace{20pt}}
 \titleformat{\chapter}[hang]
   {\huge\bfseries}
-  {\thechapter\hsp\textcolor{gray75}{|}\hsp}{0pt}{\Huge\bfseries}
+  {\thechapter\hsp\textcolor{gray75}{$|$}\hsp}{0pt}{\Huge\bfseries}
 
 
 \citationmode{abbr}
@@ -87,20 +86,32 @@ Can considering how phases in the life-cycle of a windfarm overlap and share res
 
 In particular I looked at the overlap between the installation and maintenance phases. During the installation phase turbines come online gradually, and the completed turbines start generating energy while other turbines are still being installed. These online turbines require maintenance, which means the start of the maintenance phase occurs during the installation phase. In the current literature this is not considered, and the phases are treated as wholly separate topics. 
 
-This artificial separation leads to inefficiencies from two sources. Firstly, the current maintenance literature tends to consider windfarms of a constant size, but in practice there will be time window of several months, if not years, in which a windfarm will only partially be operational. If the windfarm is treated as having full capacity during this time, there will be an excess of maintenance capacity, which will go to waste. Therefore it is beneficial to consider this overlap phase, in which turbines gradually come online, as a special time period with different maintenance requirements than the main operational phase of the windfarm. 
+This artificial separation leads to inefficiencies from two sources. Firstly, the current maintenance literature tends to consider windfarms of a constant size, but in practice there will be a time window of several months, if not years, in which a windfarm will only partially be operational. If the windfarm is treated as having full capacity during this time, there will be an excess of maintenance capacity, which will go to waste. Therefore it is beneficial to consider this overlap phase, in which turbines gradually come online, as a special time period with different maintenance requirements than the main operational phase of the windfarm. 
 
 Secondly, there are potential benefits to both installation and maintenance operations happening concurrently, that will go overlooked unless these operations are considered in tandem. Resources can be shared between the operations, such as personnel and vessels. For example, crew transfer vessels are often on standby while the crew is performing installation work at a turbine; during this downtime the vessel could be used to transport other crew members to perform maintenance work. 
 
-\section{Model}
+The extend of these inefficiencies, and potential countermeasures, have never been investigated before. The research in this chapter aims to show there are significant cost reductions to potentially be made by looking at this overlap period, and proposes an optimisation model to reduce these inefficiencies. 
+
+\bigskip
+
+Similar inefficiencies can likely be found in the overlap period between the maintenance phase and the decommission phase at the end of the life-cycle of a windfarm. The potential cost reduction from sharing resources would be identical during that period, and the effect of a gradually decreasing amount of operating turbines is the reverse of the phenomenon at the start of the life-cycle. Additionally, there are potential benefits to deciding the order of decommissioning turbines based on maintenance operations. For example, if a turbine suffers a failure after decommissioning of the site has started, it might be beneficial to decommission that turbine instead of repairing the failure, especially if the repair would be costly. 
+
+However, this current investigation focuses solely on the overlap period at the start of the life-cycle, rather than the one at the end of the life-cycle, as there has been more research regarding the installation phase compared to the decommission phase. This decision allowed us more research to build upon, and focus on the overlap period rather than the distinct phases around it. 
+
+\bigskip
+
+In \Cref{s:model} I will describe the optimisation model developed to investigate and reduce these inefficiencies. The test cases created and experiments performed will be discussed in \Cref{s:expr}, and the results will be shown in \Cref{s:resul}. Finally \Cref{s:disc} will reflect on the results and discuss potential further research into this topic. 
+
+\section{Model} \label{s:model}
 Lorem Ipsum %TODO
 
-\section{Experiments}
+\section{Experiments} \label{s:expr}
 Lorem Ipsum %TODO
 
-\section{Results}
+\section{Results} \label{s:resul}
 Lorem Ipsum %TODO
 
-\section{Discussion}
+\section{Discussion} \label{s:disc}
 Lorem Ipsum %TODO
 
 \pagebreak
